<resources>
    <string name="app_name">fridge</string>
    <string name="open_fridge_text">открыть холодильник</string>
    <string name="add_fridge_text">добавить еду</string>
    <string name="developer_chat_text">связаться с разработчиком</string>
    <string name="manual_text">руководство пользователя</string>
    <string name="settings_text">настройки</string>
    <string name="settings_button_text">выйти</string>
    <string name="i_am_lazy_text">мне лениво!</string>
    <string name="toggle_open">open</string>
    <string name="toggle_close">close</string>
    <string name="enter_ingridient_text">введите название ингридиента</string>
    <string name="ingridient">ингридиент :</string>
    <string name="fridge_title">ваш холодильник</string>
</resources>
